[build-system]
requires = ["flit-core>=3.2"]
build-backend = "flit_core.buildapi"

[project]
name = "soroban_exam"
version = "0.0.2"
authors = [
    { name="Napat Ch." },
]
description = "Get a soroban exam from www.sorobanexam.org."
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = {file = "LICENSE"}
requires-python = ">=3.8"
dependencies = [
  "requests",
  "beautifulsoup4",
]

[project.scripts]
soroban_exam = "soroban_exam:main"
